@@ -2,6 +2,8 @@ Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}
 
 {{ $NEXT }}
 
+- Fixed search for related columns overwriting existing params in generate_column_parameters
+
 2.002001  2010-04-01 01:41:11 Europe/Berlin
 
 - Remove debugging code and other noise from tests
